[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/interface/menus/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/interface/menus/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://graphics/images/fish/piranha-blue.png" type="Texture" id=3]
[ext_resource path="res://source/interface/button/Button.tscn" type="PackedScene" id=4]


[node name="TitleScreen" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Title" parent="." index="1"]
text = "Piranha Bites"

[node name="Piranha1" type="TextureRect" parent="." index="2"]
margin_left = 59.0
margin_top = 6.0
margin_right = 73.0
margin_bottom = 30.0
rect_rotation = 90.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Piranha2" type="TextureRect" parent="." index="3"]
margin_left = 179.0
margin_top = 6.0
margin_right = 193.0
margin_bottom = 30.0
rect_rotation = 90.0
rect_scale = Vector2( 2, -2 )
texture = ExtResource( 3 )

[node name="Content" parent="CenterContainer" index="0"]
margin_left = 53.0
margin_top = 23.0
margin_right = 187.0
margin_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Content" index="0"]
margin_right = 134.0
margin_bottom = 20.0

[node name="Play" parent="CenterContainer/Content/HBoxContainer" index="0" instance=ExtResource( 4 )]
margin_right = 65.0

[node name="Score" parent="CenterContainer/Content/HBoxContainer" index="1" instance=ExtResource( 4 )]
margin_left = 69.0
margin_right = 134.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Content" index="1"]
margin_top = 24.0
margin_right = 134.0
margin_bottom = 44.0

[node name="Controls" parent="CenterContainer/Content/HBoxContainer2" index="0" instance=ExtResource( 4 )]
margin_right = 42.0

[node name="Options" parent="CenterContainer/Content/HBoxContainer2" index="1" instance=ExtResource( 4 )]
margin_left = 46.0
margin_right = 88.0

[node name="Credits" parent="CenterContainer/Content/HBoxContainer2" index="2" instance=ExtResource( 4 )]
margin_left = 92.0
margin_right = 134.0

[node name="Quit" parent="BackButton" index="0" instance=ExtResource( 4 )]
margin_right = 80.0

[connection signal="pressed" from="CenterContainer/Content/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/Content/HBoxContainer/Score" to="." method="_on_Score_pressed"]
[connection signal="pressed" from="CenterContainer/Content/HBoxContainer2/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/Content/HBoxContainer2/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CenterContainer/Content/HBoxContainer2/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="BackButton/Quit" to="." method="_on_Quit_pressed"]
